--- a/chinslickingweb/home/templates/header-index.html
+++ b/chinslickingweb/home/templates/header-index.html
@@ -7,11 +7,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title class="i18n" name="title">{% trans SITE_NAME2 %} - {% trans title %}</title>
+    <title class="i18n" name="title">{% trans SITE_NAME %} - {% trans title %}</title>
     <meta id="i18n_pagename" content="index-common">
-    <meta name="keywords" content="{{ SITE_DESC2 }}">
-    <meta name="author" content="{{ SITE_AUTHOR2 }}">
-    <meta name="descriptions" content="{{ SITE_DESC2 }}">
+    <meta name="keywords" content="{{ SITE_DESC }}">
+    <meta name="author" content="{{ SITE_AUTHOR }}">
+    <meta name="descriptions" content="{{ SITE_DESC }}">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
