--- a/chinslickingweb/home/static/css/main.css
+++ b/chinslickingweb/home/static/css/main.css
@@ -701,6 +701,14 @@ iframe {
     border-bottom: 0px solid transparent;
 }
 
+.index-top-bg{
+    position: relative;
+    min-height:900px;
+    background-image: url('../images/index_top_bg.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
 
 /*****************************
  *  end my customer css
