--- a/chinslickingweb/home/templates/header.html
+++ b/chinslickingweb/home/templates/header.html
@@ -34,20 +34,36 @@
 <div class="site">
     <header>
         <div class="container">
-            <div class="row">
+            <div class="row" style="display: flex; vertical-align: middle; justify-items: center; align-items: center;">
                 <div class="col-6 col-sm-2 logo-column">
                     <a href="/king/index" class="logo">
                         <img src="{% static 'images/logo_nav.png' %}" alt="logo">
                     </a>
                 </div>
-                <div class="col-6 col-sm-10 nav-column clearfix">
-                    <div class="right-nav">
-                        <!--<span class="search-icon fa fa-search"></span>-->
-                        <!--<form action="#" class="search-form">
-                            <input type="search" placeholder="search now">
-                            <button type="submit"><i class="fa fa-search"></i></button>
-                        </form>-->
-
+                <div class="col-6 col-sm-9 nav-column clearfix">
+                    <nav id="menu" class="d-none d-lg-block">
+                        <ul>
+                            {% for item in nav_list %}
+                                {% if item.children.all %}
+                                    <li class="has-child">
+                                        <a href="{{ item.url }}">{% trans item.name %}</a>
+                                        <ul class="sub-menu">
+                                            {% for child in item.children.all %}
+                                                <li><a href="{{ child.url }}">{% trans child.name %}</a></li>
+                                            {% endfor %}
+                                        </ul>
+                                    </li>
+                                {% else %}
+                                    {% if item.is_root %}
+                                        <li><a href="{{ item.url }}">{% trans item.name %}</a></li>
+                                    {% endif %}
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-6 col-sm-1 nav-column clearfix">
+                    <div class="">
                         <form action="/i18n/setlang/" method="post" id="change_language_form" class="language-form">
                             {% csrf_token %}
                             {% get_current_language as LANGUAGE_CODE %}
@@ -61,39 +77,7 @@
                                 {% endfor %}
                             </select>
                         </form>
-                        <!--<div class="header-social">
-                            <a href="#" class="fa fa-facebook"></a>
-                            <a href="#" class="fa fa-twitter"></a>
-                            <a href="#" class="fa fa-github"></a>
-                        </div>-->
                     </div>
-                    <nav id="menu" class="d-none d-lg-block">
-                        <ul>
-                            <li><a href="/king/index">{% trans "首页" %}</a></li>
-                            <li><a href="/king/about">{% trans "品牌介绍" %}</a></li>
-                            <li><a href="/king/product_list">{% trans "在线商城" %}</a></li>
-                            <li><a href="/king/partner">{% trans "合作共赢" %}</a></li>
-                            <li><a href="/king/news_list">{% trans "新闻动态" %}</a></li>
-                            <li><a href="/king/job_list">{% trans "静候伯乐" %}</a></li>
-                            <li><a href="/king/contact">{% trans "为您服务" %}</a></li>
-                            <!--<li class="has-child">
-                                <a href="#">Pages</a>
-                                <ul class="sub-menu">
-                                    <li><a href="404.html">404</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="career.html">Career</a></li>
-                                    <li><a href="coming-soon.html">Coming Soon</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                    <li><a href="faq.html">Faq</a></li>
-                                    <li><a href="portfolio.html">Portfolio</a></li>
-                                    <li><a href="pricing.html">Pricing</a></li>
-                                    <li><a href="service.html">Service</a></li>
-                                    <li><a href="team.html">Team</a></li>
-                                    <li><a href="testimonial.html">Testimonial</a></li>
-                                </ul>
-                            </li>-->
-                        </ul>
-                    </nav>
                 </div>
             </div>
         </div>
